# ProjectVMenu

./: .gitignore  AddChannel.qml  AskDialog.qml  Browser.qml  CMakeLists.txt  Dialog.qml  GameDelegate.qml  Home.qml  LightTheme.qml  Main.qml  News.qml  NewsDelegate.qml  NewsModel.qml  ProjectVMenu_en_US.ts  RightPanel.qml  RoundedButton.qml  Settings.qml  SettingsDelegate.qml  Shop.qml  TabSideButton.qml  VListModel.h  imageparser.cpp  imageparser.h  main.cpp  newsmanager.cpp  newsmanager.h  qml.qrc  readme.md  velement.cpp  velement.h  vlistmodel.cpp  vlistmodel.h  vrunner.cpp  vrunner.h
include/: newsmanager.h  vrunner.h
src/: main.cpp  newsmanager.cpp  velement.cpp  vrunner.cpp
themes/: Theme.qml  qmldir
translations/: ProjectVMenu_en_US.ts  ProjectVMenu_ru_RU.ts
ui/: Home.qml  Main.qml  News.qml  Settings.qml
ui/Components/: AddChannel.qml  AskDialog.qml  Dialog.qml  GameDelegate.qml  NewsDelegate.qml  RightPanel.qml  RoundedButton.qml  SettingsDelegate.qml  TabSideButton.qml  qmldir
